# SR_api

./: README.md
SR_debug/app/: CMakeLists.txt  build.gradle
SR_debug/app/src/main/cpp/: SR_api.cpp  SR_api.cpp111  SR_api.h  SR_api.h111  main.cpp  sqz.cpp  srmain.cpp111
SR_debug/app/src/main/cpp/tengine_include/core/include/: serializer.hpp
SR_debug/app/src/main/cpp/tengine_include/operator/include/operator/: prelu.hpp
SR_debug/app/src/main/java/com/tcl/animoji_cpp/: MainActivity.java
sr_tengine_c_api/: sr_graph_executor.cpp  sr_graph_executor.hpp  sr_tengine_c_api.cpp
